using System;
using UnityEngine;

public static class StringValue
{
    // Axis
    public static readonly string AxisHorizontal = "Horizontal";
    public static readonly string AxisVertical = "Vertical";

    // Tags
    public static readonly string GroundTag = "Ground";

    // Animation Parameters
    public static readonly string IsRun = "IsRun";
    public static readonly string IsGrounded = "IsGrounded";
    public static readonly string Jump = "Jump";
}
