using UnityEngine;

public static class PlayerAnimationString
{
    // Animation Parameters
    public static readonly string IsRun = "IsRun";
    public static readonly string IsGrounded = "IsGrounded";
    public static readonly string Jump = "Jump";
    public static readonly string Attack = "Attack";
}
